<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photo_blog"
        android:textStyle="bold"
        android:textSize="32sp"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="25sp"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center_horizontal"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText

            android:id="@+id/editTextSignUpActivityEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout


        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/editTextSignUpActivityPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    >

        <EditText
            android:id="@+id/editTextSignUpActivityReConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="Re Enter Password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonSignUpActivitySignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/sign_up"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/buttonSignUpActivityGoToLogInScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="100dp"
        android:background="@color/colorPrimary"
        android:text="@string/already_have_an_account"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"/>
</LinearLayout>